cover to fix gaps

--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -12,11 +12,11 @@
   min-height: 120vh;
   background-origin: border-box;
   background-attachment: fixed;
-  background-size: auto 170vh;
-  -webkit-background-size: auto 170vh;
-  -moz-background-size: auto 170vh;
-  -o-background-size: auto 170vh;
-  background-position-x: 64%;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position-x: 61%;
   background-position-y: 70%;
 }
 
